quil-rs/src/program/scheduling/snapshots/quil_rs__program__scheduling__graph__graphviz_dot_tests__quantum_write_parameterized_operations.snap
---
source: quil-rs/src/program/scheduling/graph.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="ordering"];
    "block_0_start" -> "block_0_1" [label="ordering
timing"];
    "block_0_start" -> "block_0_3" [label="ordering
timing"];
    "block_0_0" [shape=rectangle, label="[0] LOAD params2[0] params1 integers[0]"];
    "block_0_0" -> "block_0_1" [label="await write"];
    "block_0_0" -> "block_0_2" [label="await write"];
    "block_0_1" [shape=rectangle, label="[1] SHIFT-PHASE 0 \"rf\" params2[0]"];
    "block_0_1" -> "block_0_2" [label="await read"];
    "block_0_1" -> "block_0_end" [label="ordering
timing"];
    "block_0_2" [shape=rectangle, label="[2] LOAD params2[0] params1 integers[1]"];
    "block_0_2" -> "block_0_3" [label="await write"];
    "block_0_3" [shape=rectangle, label="[3] SHIFT-PHASE 1 \"rf\" params2[0]"];
    "block_0_3" -> "block_0_end" [label="ordering
timing"];
    "block_0_end" [shape=circle, label="end"];
  }
}
